New ratelimiter with whitelist support

--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   },
   "dependencies": {
     "bcrypt": "3.0.6",
+    "ioredis": "^4.9.0",
     "jsonwebtoken": "^8.2.1",
     "knex": "^0.15.2",
     "micro": "^9.0.2",
     "micro-boom": "^1.1.0",
     "micro-cors": "1.0.0-alpha.1",
     "micro-hoofs": "^0.0.5",
-    "micro-ratelimit": "^0.3.0",
+    "micro-ratelimit2": "https://github.com/GuacLive/ratelimit.git",
     "microrouter": "^3.0.0",
     "mysql2": "^1.5.1",
     "nconf": "^0.10.0",
