--- a/package.json
+++ b/package.json
@@ -26,23 +26,24 @@
     "micro-dev": "^3.0.0"
   },
   "dependencies": {
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "bcrypt": "3.0.6",
-    "core-js": "2",
+    "babel-plugin-transform-regenerator": "^7.0.0-beta.3",
+    "bcrypt": "^3.0.7",
+    "core-js": "^3",
     "ioredis": "^4.9.0",
     "jsonwebtoken": "^8.2.1",
-    "knex": "^0.19.5",
+    "knex": "^0.20.3",
     "lodash.chunk": "^4.2.0",
-    "micro": "^9.0.2",
+    "micro": "^9.3.5-canary.3",
     "micro-boom": "^1.1.0",
-    "micro-cors": "1.0.0-alpha.1",
+    "micro-cors": "^1.0.0-alpha.2",
     "micro-hoofs": "^0.0.5",
     "micro-ratelimit2": "https://github.com/GuacLive/ratelimit.git",
     "microrouter": "^3.0.0",
-    "mysql2": "^1.5.1",
+    "mysql2": "^2.0.2",
     "nconf": "^0.10.0",
     "node-fetch": "^2.6.0",
     "pm2": "^4.2.0",
-    "urlencoded-body-parser": "^2.0.1"
+    "regenerator-runtime": "^0.13.3",
+    "urlencoded-body-parser": "^3.0.0"
   }
 }
