--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nconf": "^0.10.0",
     "node-fetch": "^2.6.0",
     "node-mailjet": "^3.3.1",
+    "paypal-ipn-checker": "^1.0.1-dev",
     "pm2": "^4.2.0",
     "rand-token": "^0.4.0",
     "regenerator-runtime": "^0.13.3",
