--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pm2": "^4.2.0",
     "rand-token": "^0.4.0",
     "regenerator-runtime": "^0.13.3",
+    "sqlstring": "^2.3.1",
     "urlencoded-body-parser": "^3.0.0"
   }
 }
