--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mysql2": "^2.0.2",
     "nconf": "^0.10.0",
     "node-fetch": "^2.6.0",
+    "patreon": "^0.4.1",
     "paypal-ipn-checker": "^1.0.1-dev",
     "pm2": "^4.2.0",
     "rand-token": "^0.4.0",
