--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.0.0",
+    "@sentry/node": "5.17.0",
     "abort-controller": "^3.0.0",
     "babel-plugin-transform-regenerator": "^7.0.0-beta.3",
     "bcrypt": "^3.0.7",
