--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rand-token": "^0.4.0",
     "regenerator-runtime": "^0.13.3",
     "sqlstring": "^2.3.1",
+    "timeout-signal": "^1.0.0",
     "urlencoded-body-parser": "^3.0.0"
   }
 }
