--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "micro-boom": "^1.1.0",
     "micro-cacheable": "^2.0.1",
     "micro-cors": "^1.0.0-alpha.2",
+    "micro-fork": "^3.0.0",
     "micro-hoofs": "^0.0.5",
     "micro-ratelimit2": "https://github.com/GuacLive/ratelimit.git",
-    "microrouter": "^3.0.0",
     "mysql2": "^2.0.2",
     "nconf": "^0.10.0",
     "node-fetch": "^2.6.0",
