--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-fetch": "^2.6.1",
     "patreon": "^0.4.1",
     "paypal-ipn-checker": "^1.0.1-dev",
+    "pem": "^1.14.4",
     "pm2": "^4.2.0",
     "rand-token": "^0.4.0",
     "regenerator-runtime": "^0.13.3",
