--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sendgrid/mail": "^7.0.0",
     "@sentry/node": "5.17.0",
     "abort-controller": "^3.0.0",
+    "accepts": "^1.3.7",
     "babel-plugin-transform-regenerator": "^7.0.0-beta.3",
     "bcrypt": "^5.0.0",
     "core-js": "^3",
