--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sentry/node": "5.17.0",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.7",
+    "aws-sdk": "^2.841.0",
     "babel-plugin-transform-regenerator": "^7.0.0-beta.3",
     "bcrypt": "^5.0.0",
     "core-js": "^3",
@@ -46,6 +47,7 @@
     "micro-fork": "^3.0.0",
     "micro-hoofs": "^0.0.5",
     "micro-ratelimit2": "https://github.com/GuacLive/ratelimit.git",
+    "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nconf": "^0.10.0",
     "node-fetch": "^2.6.1",
@@ -55,6 +57,7 @@
     "pm2": "^4.2.0",
     "rand-token": "^0.4.0",
     "regenerator-runtime": "^0.13.3",
+    "s3-blob-store": "^4.1.1",
     "sqlstring": "^2.3.1",
     "timeout-signal": "^1.0.0",
     "urlencoded-body-parser": "^3.0.0"
