--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "s3-commons": "^1.0.1",
     "sqlstring": "^2.3.1",
     "timeout-signal": "^1.0.0",
-    "urlencoded-body-parser": "^3.0.0"
+    "urlencoded-body-parser": "^3.0.0",
+    "uuid": "^8.3.2"
   }
 }
