--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@babel/preset-react": "^7.0.0-beta.40",
     "@babel/preset-stage-1": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.42",
-    "micro-dev": "^3.0.0"
+    "micro-dev": "^3.0.0",
+    "prisma": "2.28.0"
   },
   "dependencies": {
+    "@prisma/client": "2.28.0",
     "@sendgrid/mail": "^7.0.0",
     "@sentry/node": "5.17.0",
     "abort-controller": "^3.0.0",
