--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "2.28.0",
     "@sendgrid/mail": "^7.0.0",
     "@sentry/node": "5.17.0",
+    "@sentry/tracing": "^6.13.3",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.7",
     "aws-sdk": "^2.841.0",
