--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "2.28.0"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "@prisma/client": "2.28.0",
     "@sendgrid/mail": "^7.0.0",
     "@sentry/node": "5.17.0",
