--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sentry/tracing": "^6.13.3",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.7",
+    "argon2": "^0.28.3",
     "aws-sdk": "^2.841.0",
     "babel-plugin-transform-regenerator": "^7.0.0-beta.3",
     "bcrypt": "^5.0.0",
