--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@babel/preset-stage-1": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.42",
     "micro-dev": "^3.0.0",
-    "prisma": "2.28.0"
+    "prisma": "^4"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
-    "@prisma/client": "2.28.0",
+    "@prisma/client": "^4",
     "@sendgrid/mail": "^7.0.0",
     "@sentry/node": "5.17.0",
     "@sentry/tracing": "^6.13.3",
